rook/minio/s3-objectstore-dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-minio
