rook/minio/s3-objectstore-prod.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-minio
