rook/minio/service-objectstore-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: rook-minio
  labels:
    name: minio-service
    rook_cluster: minio
    storage: s3-storage
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: rook-minio-objectstore
