rook/minio/service-objectstore-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: rook-minio
  labels:
    name: minio-service
    rook_cluster: minio
    storage: s3-storage
spec:
  type: NodePort
  ports:
  - name:
    port: 9000
    protocol: TCP
  selector:
    name: minio-service
    rook_cluster: minio
    storage: s3-storage
